@@ -18,6 +18,8 @@ examples/check_length_fix_fail.pl
 examples/check_length_fix_ok.pl
 examples/check_length_ok.pl
 examples/check_number_fail.pl
+examples/check_number_min_fail.pl
+examples/check_number_min_ok.pl
 examples/check_number_of_items_fail.pl
 examples/check_number_of_items_ok.pl
 examples/check_number_ok.pl
@@ -62,13 +64,14 @@ t/Mo-utils/09-check_isa.t
 t/Mo-utils/10-check_length.t
 t/Mo-utils/11-check_length_fix.t
 t/Mo-utils/12-check_number.t
-t/Mo-utils/13-check_number_of_items.t
-t/Mo-utils/14-check_number_range.t
-t/Mo-utils/15-check_regexp.t
-t/Mo-utils/16-check_required.t
-t/Mo-utils/17-check_string.t
-t/Mo-utils/18-check_string_begin.t
-t/Mo-utils/19-check_strings.t
+t/Mo-utils/13-check_mumber_min.t
+t/Mo-utils/14-check_number_of_items.t
+t/Mo-utils/15-check_number_range.t
+t/Mo-utils/16-check_regexp.t
+t/Mo-utils/17-check_required.t
+t/Mo-utils/18-check_string.t
+t/Mo-utils/19-check_string_begin.t
+t/Mo-utils/20-check_strings.t
 utils.pm
 xt/Mo-utils/01-pod_coverage.t
 xt/Mo-utils/02-pod.t
