@@ -1,4 +1,5 @@
 0.25
+ - Add check_number_min().
 
 0.24 2024-03-07T10:15:30+01:00
  - Add check_string().
